--- a/services/addons.cfg
+++ b/services/addons.cfg
@@ -25,22 +25,22 @@
 
 
 # A comma-separated list of bindings to install (e.g. "sonos,knx,zwave")
-binding = 
+#binding = 
 
 # A comma-separated list of UIs to install (e.g. "basic,paper")
-ui = 
+#ui = 
 
 # A comma-separated list of persistence services to install (e.g. "rrd4j,jpa")
-persistence = 
+#persistence = 
 
 # A comma-separated list of actions to install (e.g. "mail,pushover")
-action = 
+#action = 
 
 # A comma-separated list of transformation services to install (e.g. "map,jsonpath")
-transformation = 
+#transformation = 
 
 # A comma-separated list of voice services to install (e.g. "marytts,freetts")
-voice = 
+#voice = 
 
 # A comma-separated list of miscellaneous services to install (e.g. "myopenhab")
-misc = 
+#misc = 
